fix: remove horizontal scrollbar for Windows devices

--- a/client/scss/core/_root.scss
+++ b/client/scss/core/_root.scss
@@ -25,6 +25,7 @@ body,
 
 html {
   font-size: 10px;
+  overflow-x: hidden;
 }
 
 body {
